syntax = "proto3";
package jobTitles;
import "base.proto";

service JobTitleService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryJobTitle) returns (GetListResponse) {}
  rpc create(JobTitle) returns (GetOneResponse) {}
  rpc update(JobTitle) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message JobTitle {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string name = 7;
  optional bool isBoard = 8;

}
message QueryJobTitle {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional string name = 11;
  optional bool isBoard = 12;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated JobTitle data = 6;
}

message GetOneResponse {
  string message = 1;
  optional JobTitle data = 2;
}